--- a/conf/application.conf
+++ b/conf/application.conf
@@ -383,14 +383,9 @@ db {
   #default.password = ""
 
   default.driver=org.postgresql.Driver
-//  default.url="jdbc:postgresql://localhost:5432/competitors"
-//  default.username="postgres"
-//  default.password="dummy"
-
-//  default.driver=com.mysql.jdbc.Driver
-//  default.url="jdbc:mysql://pruebas.c16ip1pycpgj.us-west-2.rds.amazonaws.com:3306/competitors"
-//  default.username="jssalamanca1967"
-//  default.password="web.4567-2"
+  default.url="jdbc:postgresql://ec2-23-23-254-217.compute-1.amazonaws.com:5432/d70kv8rhs9a414"
+  default.username="odllfujnhblguz"
+  default.password="p1OTX95wthz3Xlk3Tmhf-Ey8Xc"
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
